# wgpu_demo

./: Cargo.toml  README.md  build.rs  notes.md
res/: cobble.mtl  cube.mtl  diffuse-normal-glossiness.mtl  diffuse-normal-shininess.mtl  diffuse-normal.mtl  diffuse.mtl  env-map.dds  untextured.mtl
res/shaders/: compositor.wgsl  diffuse.wgsl  diffuse_normal.wgsl  diffuse_normal_shininess.wgsl  model.wgsl
res/shaders/model/: diffuse.wgsl  diffuse_normal.wgsl  diffuse_normal_shininess.wgsl  notex.wgsl
src/: main.rs
src/lib/: app.rs  camera.rs  camera_controller.rs  compositor.rs  gpu_state.rs  light.rs  mod.rs  model.rs  render_pipeline.rs  resources.rs  scene.rs  texture.rs  util.rs
