[package]
name = "result"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winit = { version = "0.26" }
tao = "0.12"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13.1"
pollster = "0.2"
bytemuck = { version = "1.10", features = [ "derive" ] }
anyhow = "1.0"
tobj = { version = "3.2.1", features = [ "async" ]}
instant = "0.1"
image = "0.24"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

